# cneuromod_cerebellum_qc

./: .gitignore  README.md  cereb_qc.py  download_suit_atlas.py  pyproject.toml  requirements.txt
qc/: aggregation.py  atlas.py  discovery.py
qc/metrics/: coverage.py  motion.py  noise.py  tsnr.py
qc/report/: builder.py  embed.py  figures.py
scripts/: cereb_qc.py  diagnose_yeo.py  download_suit_atlas.py  plot_atlas.py
tests/: conftest.py  test_coverage.py  test_motion.py  test_tsnr.py
